prevent wrapping for proceed to pay button on small screen

--- a/css/booking.css
+++ b/css/booking.css
@@ -1494,3 +1494,7 @@ a[href="#next"]:hover {
 #booking-form #account-creation-info {
     display: none;
 }
+
+.wizard>.actions a {
+    white-space: nowrap;
+}
